<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kdaf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">WELCOME TO KDAF</string>
    <string name="user">username</string>
    <string name="pass">password</string>
    <string name="entrar">Sign in</string>
    <string name="search">SEARCH</string>
    <string name="launch">LAUNCH</string>
    <string name="menu_search">SEARCH DIAGNOSIS</string>
    <string name="menu_launch">LAUNCH DIAGNOSIS</string>
    <string name="cuenta">NUEVA CUENTA</string>
    <string name="crear">CREAR</string>
    <string name="modificar">MODIFICAR CUENTA</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="hypotheses">HYPOTHESES</string>
    <string name="service">Service</string>
    <string name="scenario">Scenario</string>
    <string name="started">Started date</string>
    <string name="finished">Finished date</string>
    <string name="hypthesis">HYPOTHESIS</string>
    <string name="probability">PROBABILITY</string>
    <string name="cancelar">CANCELAR</string>
    <string name="display">Displaying %1$s of %2$s</string>
    <string name="ticket">Ticket</string>
    <string name="vacio"/>

</resources>
